# MathToolKitCPP

./: .gitmodules  .travis.yml  CMakeLists.txt  ConsoleMenu.cpp  ConsoleMenu.h  Doxyfile  README.md  _a_e_s_byte_8h_source.html  _n_algebra_8h_source.html  _n_algebra_tuto_start.html  _n_analysis_8h_source.html  _n_compact_8h_source.html  _n_constant_field_8h_source.html  _n_d_set_8h_source.html  _n_geometry_8h_source.html  _n_ode_8h_source.html  _n_p_field_8h_source.html  _n_p_matrix_8h_source.html  _n_parallelepiped_8h_source.html  _n_segment_8h_source.html  _n_vector_8h_source.html  _pixel_8h_source.html  _s_newtonian_field_8h_source.html  _vector3_8h_source.html  annotated.html  annotated.js  class_a_e_s_byte-members.html  class_a_e_s_byte.html  class_a_e_s_byte.js  class_n_compact-members.html  class_n_compact.html  class_n_compact.js  class_n_constant_field-members.html  class_n_constant_field.html  class_n_d_set-members.html  class_n_d_set.html  class_n_d_set.js  class_n_ode-members.html  class_n_ode.html  class_n_p_field-members.html  (+108 more)
MathToolKit/: CMakeLists.txt  LICENSE
MathToolKit/NAlgebra/: CMakeLists.txt
MathToolKit/NAlgebra/header/: AESByte.h  NAlgebra.h  NPMatrix.h  NVector.h  Pixel.h  Vector3.h  typedef.h
MathToolKit/NAlgebra/source/: AESByte.cpp  NPMatrix.cpp  (+2 more)
MathToolKit/NAnalysis/: CMakeLists.txt
MathToolKit/NAnalysis/header/: NAnalysis.h  NConstantField.h  NOde.h  NPField.h  SNewtonianField.h
MathToolKit/NAnalysis/source/: NConstantField.cpp  NOde.cpp  NPField.cpp  SNewtonianField.cpp
MathToolKit/NGeometry/: CMakeLists.txt
MathToolKit/NGeometry/header/: NCompact.h  NDSet.h  NGeometry.h  NParallelepiped.h  NSegment.h
MathToolKit/NGeometry/source/: NCompact.cpp  NDSet.cpp  NParallelepiped.cpp  NSegment.cpp
NAlgebra/: CMakeLists.txt  ENVector.cpp  ENVector.h  NMatrix.cpp  NMatrix.h  NPMatrix.cpp  NPMatrix.h  NVector.cpp  NVector.h  Vector3.cpp  Vector3.h
NAlgebra/header/: AESByte.h  NMatrix.h  NPMatrix.h  NVector.h  Pixel.h  Vector3.h
NAlgebra/source/: AESByte.cpp  ENVector.cpp  NMatrix.cpp  NPMatrix.cpp  NVector.cpp  Pixel.cpp  Vector3.cpp
NAnalysis/: CMakeLists.txt  NConstantField.cpp  NConstantField.h  NOde.cpp  NOde.h  NPField.cpp  NPField.h  SNewtonianField.cpp  SNewtonianField.h
NAnalysis/header/: NConstantField.h  NOde.h  NPField.h  SNewtonianField.h
NAnalysis/source/: NConstantField.cpp  NOde.cpp  NPField.cpp  SNewtonianField.cpp
NGeometry/: CMakeLists.txt  NCompact.cpp  NCompact.h  NDSet.cpp  NDSet.h  NParallelepiped.cpp  NParallelepiped.h  NSegment.cpp  NSegment.h  NSet.cpp  NSet.h
NGeometry/header/: NCompact.h  NDSet.h  NParallelepiped.h  NSegment.h  NSet.h
NGeometry/source/: NCompact.cpp  NDSet.cpp  NParallelepiped.cpp  NSegment.cpp  NSet.cpp
TestsMathToolKitCPP/: CMakeLists.txt  tests.cpp  tests.h
TestsMathToolKitCPP/TestNAlgebra/: BenchNMatrix.cpp  BenchNPMatrix.cpp  BenchNVector.cpp  CMakeLists.txt  TestNMatrix.cpp  TestNMatrixFuncOp.cpp  TestNPMatrix.cpp  TestNPMatrixFuncOp.cpp  TestNVector.cpp  TestNVectorFuncOp.cpp  TestPixel.cpp  TestVector3.cpp  tests.cpp  tests.h
TestsMathToolKitCPP/TestNAnalysis/: CMakeLists.txt  TestNPField.cpp
TestsMathToolKitCPP/TestNGeometry/: CMakeLists.txt  TestNParallelepiped.cpp
docs/: _a_e_s_byte_8cpp.html  _a_e_s_byte_8cpp.js  _a_e_s_byte_8cpp_source.html  _a_e_s_byte_8h.html  _a_e_s_byte_8h_source.html  _formulas.tex  _getting.html  _n_algebra_8h.html  _n_algebra_8h_source.html  _n_algebra_tuto_start.html  _n_analysis_8h.html  _n_analysis_8h_source.html  _n_compact_8cpp.html  _n_compact_8cpp.js  _n_compact_8cpp_source.html  _n_compact_8h.html  _n_compact_8h.js  _n_compact_8h_source.html  _n_constant_field_8cpp.html  _n_constant_field_8cpp_source.html  _n_constant_field_8h.html  _n_constant_field_8h_source.html  _n_d_set_8cpp.html  _n_d_set_8cpp_source.html  _n_d_set_8h.html  _n_d_set_8h_source.html  _n_geometry_8h.html  _n_geometry_8h_source.html  _n_ode_8cpp.html  _n_ode_8cpp_source.html  _n_ode_8h.html  _n_ode_8h_source.html  _n_p_field_8cpp.html  _n_p_field_8cpp_source.html  _n_p_field_8h.html  _n_p_field_8h_source.html  _n_p_matrix_8cpp.html  _n_p_matrix_8cpp_source.html  _n_p_matrix_8h-example.html  _n_p_matrix_8h.html  (+207 more)
docs/latex/: _a_e_s_byte_8cpp.tex  _a_e_s_byte_8h.tex  _n_compact_8cpp.tex  _n_compact_8h.tex  _n_constant_field_8cpp.tex  _n_constant_field_8h.tex  _n_d_set_8cpp.tex  _n_d_set_8h.tex  _n_ode_8cpp.tex  _n_ode_8h.tex  _n_p_field_8cpp.tex  _n_p_field_8h.tex  _n_p_matrix_8cpp.tex  _n_p_matrix_8h.tex  _n_parallelepiped_8cpp.tex  _n_parallelepiped_8h.tex  _n_segment_8cpp.tex  _n_segment_8h.tex  _n_vector_8cpp.tex  _n_vector_8h.tex  _pixel_8cpp.tex  _pixel_8h.tex  _s_newtonian_field_8cpp.tex  _s_newtonian_field_8h.tex  _vector3_8cpp.tex  _vector3_8h.tex  annotated.tex  class_a_e_s_byte.tex  class_n_compact.eps  class_n_compact.tex  class_n_constant_field.eps  class_n_constant_field.tex  class_n_d_set.eps  class_n_d_set.tex  class_n_ode.tex  class_n_p_field.tex  class_n_p_matrix.eps  class_n_p_matrix.tex  class_n_parallelepiped.eps  class_n_parallelepiped.tex  (+25 more)
docs/search/: all_0.html  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_17.html  all_17.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  (+115 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  functions_0.js  functions_1.js  functions_12.js  functions_13.js  functions_16.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+8 more)
